--- a/app/globals.css
+++ b/app/globals.css
@@ -39,6 +39,7 @@
 
   .dark {
     --background: 240 3.7% 15.9%;
+    --old-background: 222.2 84% 4.9%;
     --foreground: 210 40% 98%;
 
     --card: 222.2 84% 4.9%;
