- added Redis to cache playlists - added new loading animation - play again button no longer takes you back to playlist

--- a/app/globals.css
+++ b/app/globals.css
@@ -78,7 +78,6 @@
   }
 }
 
-
 .circle {
   position: absolute;
   border-radius: 50%;
@@ -197,4 +196,28 @@
   100% {
     transform: scale(0.8);
   }
+}
+
+@keyframes dots {
+  0%,
+  20% {
+    content: "."; /* One dot */
+  }
+  25%,
+  45% {
+    content: ".."; /* Two dots */
+  }
+  50%,
+  70% {
+    content: "..."; /* Three dots */
+  }
+  75%,
+  100% {
+    content: ""; /* Reset to no dots */
+  }
+}
+
+.dots::after {
+  content: ""; /* Start with no additional dots */
+  animation: dots 1.5s steps(1, end) infinite; /* Animate the dots */
 }
